Fixes bug with invisible background image

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -72,7 +72,7 @@ h3 {
   @media screen and (max-width: 768px ) {
     flex-direction: column;
     justify-content: flex-end;
-    background-image: url('/public/Git-Icon-White.png');
+    background-image: url('public/Git-Icon-White.png');
     background-attachment : scroll;
     background-position: center right ;
     background-repeat : no-repeat;
